Covert mirath result from english to arabic
Previously, the result numbers are displayed in English. Since the
app is arabic, all its contents should be in Arabic. We accomplish
this by creating script file 'mirath-result.js' with the logic of
conversion implemented in toArabicDigit(). we then add the file as
script to 'mirath-result' view

--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -15,4 +15,4 @@ block content2
       .col-6
         a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
         role='button', aria-disabled='true') التفاصيل
-  
+  script(src="/javascripts/mirath-result.js")
