Add space below all buttons

--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -8,11 +8,11 @@ block content2
         h5.card-header.text-center.arabic-content إستحقاق الورثه  
         .card-body.arabic-content
           +displayResultTable(result)
-    .row
+    .row.mb-4
       .col-6
         a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/result',
         role='button', aria-disabled='true') أطبع النتيجه
-      .col-6
+      .col-5.mr-4
         a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
         role='button', aria-disabled='true') التفاصيل
   script(src="/javascripts/mirath-result.js")
