--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -18,7 +18,7 @@ block content2
         action= "/mirath/data-entry/alwratha")
         .col-12.col-sm-10.col-lg-8
           +createCards(listOfAlwartha)
-        button.btn.btn-primary.btn-lg.arabic-content(
+        button.btn.btn-primary.btn-lg.arabic-content.mb-4(
           id="submitAlwratha", type="submit",
           aria-disabled='true') أحسب اﻷنصبه
   script(src="/javascripts/mirath-data-validation.js")
