Use padding to add space under all buttons
Previously, this space was added as margin. The margin does not
add the space incide the container which results in the added
space having a white background. To resolve this, we use class .pb
to add the space

--- a/app_server/views/mirath-detail.jade
+++ b/app_server/views/mirath-detail.jade
@@ -8,7 +8,7 @@ block content2
         h5.card-header.text-center.arabic-content(
           style='background-color: #c7f6a894') تفاصيل حساب اﻷنصبه  
         .card-body.arabic-content
-    .row.mb-4
+    .row.pb-4
       .col-12
         a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
         role='button', aria-disabled='true') أطبع التفاصيل
