--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -8,7 +8,7 @@ block content2
         h5.card-header.text-center.arabic-content إستحقاق الورثه  
         .card-body.arabic-content
           +displayResultTable(result)
-    .row.mb-4
+    .row.pb-4
       .col-6
         a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/result',
         role='button', aria-disabled='true') أطبع النتيجه
