--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -6,7 +6,7 @@ block content2
     .col-12.col-sm-10.col-lg-8
       .card.mb-3.mt-3
         h5.card-header.text-center.arabic-content إستحقاق الورثه  
-        .card-body.arabic-content
+        .card-body.arabic-content.pl-0.pr-0.pt-0
           +displayResultTable(result)
     .row.pb-4
       .col-6
