Create server controllers helper

--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -2,5 +2,5 @@ extends layouts/main-layout
 include ./includes/sharedHTMLFunctions
 
 block content1
-  +displayNavItems(items)
+  +displayNavItems(navbar)
       
