Retrieve navbars from db through api

--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -2,6 +2,6 @@ extends main-layout
 include ../includes/sharedHTMLFunctions
 
 block content1
-  +displayNavItems(items)
+  +displayNavItems(navbar)
   block content2
   
