Add carousel to mirath home view

--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -1,4 +1,8 @@
 extends layouts/mirath-layout
+include includes/sharedHTMLFunctions
 
 block content2
-  
+  center
+    +createCarousel()
+    
+      
