--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -1,20 +1,25 @@
-mixin outputRating(rating)
-  - for(var i = 1; i <= rating; i++)
-    span.glyphicon.glyphicon-star
-  - for(var i = rating; i < 5; i++)  
-    span.glyphicon.glyphicon-star-empty
-
-mixin formatDate(timeStamp)
-  -
-    var monthNames = ["January", "February", "March", 
-                      "April", "May", "June", "July", "August",
-                      "September", "October", "November",  "December"];
-  - var date = new Date(timeStamp);
-  - var day = date.getDate();
-  - var month = monthNames[date.getMonth()];
-  - var year = date.getFullYear();
-  - var output = day + ' ' + month + ' ' + year;
-  = output
+mixin createCarousel(items)
+  #ayat-carousel.carousel.slide(data-ride='carousel')
+    // Wrapper for slides
+    .row
+      .col-12.mr-3
+        .carousel-inner
+          .carousel-content.arabic-content
+            .carousel-item.active
+                p 1
+            .carousel-item
+                p 3
+    // Controls
+    a.carousel-control-prev(href='#ayat-carousel', role='button',
+                            data-slide='prev')
+      span.carousel-control-prev-icon(
+        style='background-image:url("/images/icon-prev.png")')
+      span.sr-only Previous
+    a.carousel-control-next(href='#ayat-carousel', role='button',
+                            data-slide='next')
+      span.carousel-control-next-icon(
+        style='background-image: url("/images/icon-next.png")')
+      span.sr-only Next
 
 mixin createCards(listOfWratha)
   each people, cluster in listOfWratha 
