Add background to mirath carousel

--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -2,7 +2,7 @@ extends layouts/mirath-layout
 include includes/sharedHTMLFunctions
 
 block content2
-  center
+  center(style="position: relative;")
     +createCarousel(ayat)
     
       
