--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -1,17 +1,16 @@
 mixin createCarousel(items)
-  center
-    .col-12.col-sm-10
-      #ayat-carousel.carousel.slide(data-ride='carousel')
+    .col-12.col-sm-10.mt-3
+      #ayat-carousel.carousel.slide(data-ride='carousel').pt-4.pb-4.pr-4.pl-4.pr-sm-5.pl-sm-5
         // Wrapper for slides
         .carousel-inner
           .carousel-content.arabic-content.pr-sm-3.pl-sm-3.pr-lg-5.pl-lg-5
             each item, index in items
               -if(index === 0)
-                .carousel-item.active
-                  span #{item.text}
+                .carousel-item.active.img.img-fluid
+                  p #{item.text}
               -else
                 .carousel-item
-                  span #{item.text}
+                  p #{item.text}
         // Controls
       a.carousel-control-prev(href='#ayat-carousel', role='button',
                               data-slide='prev')
