Finish design of mirath's carousel

--- a/app_server/views/includes/mirath-data-mixins.jade
+++ b/app_server/views/includes/mirath-data-mixins.jade
@@ -7,7 +7,7 @@ mixin displayAltarikaForm()
     .col-12.col-lg-10
       .input-group.arabic-content.mb-2
         span.input-group-addon.addon-checkbox-right
-          input(type='checkbox',
+          input(type='checkbox', id="test",
             aria-label='Checkbox for following text input')             
         span.input-group-addon.removed-border-right #{tarikaType}     
         input.form-control.addon-textarea-right(name= tarikaType, 
