--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -4,5 +4,6 @@ include includes/sharedHTMLFunctions
 block content2
   center(style="position: relative;")
     +createCarousel(ayat)
+  script(src= "/javascripts/general-script.js")
     
       
