--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,15 +77,18 @@ form.jumbotron *:not(button){
 #ayat-carousel{
     width: auto;
     height: auto;
-    background: #5e357952;
+    border: 2px outset #5e357952;
 }
 
 .carousel-content {
     display:flex;
     align-items:center;
-    color: blanchedalmond;
-    font-style: italic;
     font-size: larger;
+}
+
+.badge-pill{
+    color: white;
+    background: #5e357952;
 }
 
 @media screen and (min-width: 240px) {
