--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -66,20 +66,15 @@ mixin displayResultTable(result)
 
 mixin displayNavItems(items)
   nav.navbar.navbar-expand-sm.navbar-dark.bg-primary.arabic-content
-    a.navbar-brand(href= items[0].url) #{items[0].name}      
+    a.navbar-brand.text-secondary(href= items[0].url) #{items[0].name}      
     button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
       data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
       aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #collapsibleNavId.collapse.navbar-collapse
       ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
-        -for(var index = 1; index < items.length; index++)
-          -if(index === 1)
-            li.nav-item.active
-              a.nav-link(href= items[index].url) #{items[index].name}
-                span.sr-only (current)
-          -else            
-            li.nav-item
-              a.nav-link(href= items[index].url) #{items[index].name}   
+        -for(var index = 1; index < items.length; index++)       
+          li.nav-item
+            a.nav-link(href= items[index].url) #{items[index].name}   
       
       
