--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -21,4 +21,5 @@ block content2
         button.btn.btn-primary.btn-lg.arabic-content.mb-4(
           id="submitAlwratha", type="submit",
           aria-disabled='true') أحسب اﻷنصبه
-  script(src="/javascripts/mirath-data-validation.js")
+  script(src="/javascripts/mirath-data-validation.js" defer)
+  script(src="/javascripts/general-script.js")
