--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -25,8 +25,7 @@ mixin createCarousel(items)
 
 mixin displayItem(item)
   p #{item.text}
-  span.badge-pill
-    سورة #{item.sura} اﻵيه (#{item.verse})
+  span.badge-pill سورة #{item.sura} اﻵيه (#{item.verse})
 
 mixin createCards(listOfWratha)
   each people, cluster in listOfWratha 
