--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -15,7 +15,7 @@ html(lang='ar')
         #banner.page-header.mt-0
           .row
             .col-12
-              h1.arabic-content.text-primary اﻹستحقاقات في اﻹسلام  
+              h1#appName.arabic-content.text-secondary اﻹستحقاقات في اﻹسلام  
           .row
             .col-sm-12.mr-sm-5.mr-4
               p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في الشريعه اﻹسلاميه    
