--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -3,7 +3,7 @@ html(lang='ar')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title اﻹستحقاقات في اﻹسلام
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.2/minty/bootstrap.min.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.2/cerulean/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
     
@@ -15,7 +15,7 @@ html(lang='ar')
         #banner.page-header.mt-0
           .row
             .col-12
-              h1#appName.arabic-content.text-secondary اﻹستحقاقات في اﻹسلام  
+              h1#appName.arabic-content.text-primary اﻹستحقاقات في اﻹسلام  
           .row
             .col-sm-12.mr-sm-5.mr-4
               p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في الشريعه اﻹسلاميه    
