--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -15,4 +15,4 @@ block content2
       .col-5.mr-4
         a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
         role='button', aria-disabled='true') التفاصيل
-  script(src="/javascripts/general-script.js")
+  script(src="/scripts/general.js")
