--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -21,5 +21,7 @@ block content2
         button.btn.btn-primary.btn-lg.arabic-content.mb-4(
           id="submitAlwratha", type="submit",
           aria-disabled='true') أحسب اﻷنصبه
+    +addModal()
   script(src="/scripts/mirath/alwratha.brow.js")
+
   
