--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -45,7 +45,7 @@ mixin createCards(listOfWratha)
                   -else   
                     input.form-control.addon-textarea-right(name=person.relationship, 
                       type='number', disabled, placeholder=0, data-toggle="tooltip", 
-                      data-placement="top", title="ادخل عدد اﻷفراد باﻷرقام")        
+                      data-placement="top", title="أدخل عدد اﻷفراد باﻷرقام")        
                     
 
 mixin displayResultTable(result)
