Add padding below carousel

--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -1,5 +1,5 @@
 mixin createCarousel(items)
-    .col-12.col-sm-10.mt-3
+    .col-12.col-sm-10.mt-3.pb-4
       #ayat-carousel.carousel.slide(data-ride='carousel').pt-4.pb-4.pr-4.pl-4.pr-sm-5.pl-sm-5
         // Wrapper for slides
         .carousel-inner
