Correct some spelling mistakes

--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -18,7 +18,7 @@ html(lang='ar')
               h1#appName.arabic-content.text-primary اﻹستحقاقات في اﻹسلام  
           .row
             .col-sm-12.mr-sm-5.mr-4
-              p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في الشريعه اﻹسلاميه    
+              p.arabic-content تطبيق لحساب الميراث ,الزكاة ,الدية والفيء حسب قوانينها المنصوص عليها في الشريعة اﻹسلامية    
       hr.my-1
       .container-fluid.ml-0.pl-0.mr-0.pr-0
         block content1
