--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -20,7 +20,7 @@ block content2
           +createCards(listOfAlwartha)
         button.btn.btn-primary.btn-lg.arabic-content.mb-4(
           id="submitAlwratha", type="submit",
-          aria-disabled='true') أحسب اﻷنصبه
+          aria-disabled='true') أحسب اﻷنصبة
     +addModal()
   script(src="/scripts/mirath/alwratha.brow.js")
 
