--- a/app_server/views/includes/mirath-data-mixins.jade
+++ b/app_server/views/includes/mirath-data-mixins.jade
@@ -1,6 +1,6 @@
 mixin displayAltarikaForm()
   - const altarikaTypes = ["أموال", "عقار"]
-  h5.arabic-content ادخل تفاصيل التركه
+  h5.arabic-content ادخل تفاصيل التركة
   hr.my-2.col-10.mr-0
   .col-12.col-sm-6
   each tarikaType in altarikaTypes
@@ -10,11 +10,7 @@ mixin displayAltarikaForm()
           input(type='checkbox', id="test",
             aria-label='Checkbox for following text input')             
         span.input-group-addon.removed-border-right #{tarikaType}
-        -var tip = "أدخل قيمة ال" + tarikaType; 
-        -if(tarikaType == "أموال")
-          -tip += " باﻷرقام"
-        -else
-          -tip += " بعدد اﻷمتار"
+        -var tip = "أدخل قيمة " + tarikaType + " المتوفى باﻷرقام"; 
         input.form-control.addon-textarea-right(name= tarikaType, 
           type='text', disabled, placeholder=0, data-toggle="tooltip", 
           data-placement="top", title=tip) 
