--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -4,13 +4,8 @@ include includes/sharedHTMLFunctions
 block content2
   center(style="position: relative;")
     +createCarousel(ayat)
-    .row.pb-4
-      .col-6
-        a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/altarika',
-        role='button', aria-disabled='true') إدخال التركة
-      .col-5.mr-4
-        a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/alwratha',
-        role='button', aria-disabled='true') إدخال الورثة
+    +createTwoButtons("إدخال التركة", "/mirath/altarika/",
+      "إدخال الورثة", "/mirath/alwratha")
   script(src="/scripts/general.js")
   
       
