Start adding back buttons

--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -4,8 +4,8 @@ include includes/sharedHTMLFunctions
 block content2
   center(style="position: relative;")
     +createCarousel(ayat)
-    +createTwoButtons("إدخال التركة", "/mirath/altarika/",
-      "إدخال الورثة", "/mirath/alwratha")
+    +createThreeButtons("إدخال التركة", "/mirath/altarika/",
+      "إدخال الورثة", "/mirath/alwratha", "/")
   script(src="/scripts/general.js")
   
       
