--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -93,11 +93,14 @@ mixin addModal()
         .modal-body
           span error message
 
-mixin createTwoButtons(b1Text, b1Href, b2Text, b2Href)
+mixin createThreeButtons(b1Text, b1Href, b2Text, b2Href, backHref)
   .row.pb-4
-      .col-6
-        a.btn.btn-primary.btn-lg.arabic-content(href=b1Href,
-        role='button', aria-disabled='true') #{b1Text}
-      .col-5.mr-4
-        a.btn.btn-outline-info.btn-lg.arabic-content(href=b2Href,
-        role='button', aria-disabled='true') #{b2Text}
+    .col-3
+      a.btn.btn-outline-info.btn-lg.arabic-content(href=b2Href,
+      role='button', aria-disabled='true') #{b2Text}
+    .col-4.mr-3
+      a.btn.btn-primary.btn-lg.arabic-content(href=b1Href,
+      role='button', aria-disabled='true') #{b1Text}
+    .col-3.mr-3
+      a.btn.btn-outline-warning.btn-lg.arabic-content(href=backHref,
+      role='button', aria-disabled='true') رجوع
