--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -2,13 +2,14 @@ extends layouts/mirath-layout
 include includes/sharedHTMLFunctions
 
 block content2
-  .container-fluid.pr-0.pl-0(align="middle")
-    .col-12.col-sm-10.col-lg-8
-      .card.mb-3.mt-3
-        h5.card-header.text-center.arabic-content إستحقاق الورثه  
-        .card-body.arabic-content.pl-0.pr-0.pt-0
-          +displayResultTable(result)
-    +createTwoButtons("أطبع النتيجة","/mirath/result", 
-      "تفاصيل اﻷنصبة","/mirath/result/detail")
+  center
+    .container-fluid.pr-0.pl-0(align="middle")
+      .col-12.col-sm-10.col-lg-8
+        .card.mb-3.mt-3
+          h5.card-header.text-center.arabic-content إستحقاق الورثه  
+          .card-body.arabic-content.pl-0.pr-0.pt-0
+            +displayResultTable(result)
+    +createThreeButtons("أطبع النتيجة", "/mirath/result", 
+      "التفاصيل", "/mirath/result/detail", "/mirath/alwratha")
     
   script(src="/scripts/general.js")
