--- a/app_server/views/mirath-wratha.jade
+++ b/app_server/views/mirath-wratha.jade
@@ -7,9 +7,15 @@ block content2
       action= "/mirath/alwratha")
       .col-12.col-sm-10.col-lg-8
         +createCards(listOfAlwartha)
-      button.btn.btn-primary.btn-lg.arabic-content.mb-4(
-        id="submitAlwratha", type="submit",
-        aria-disabled='true') أحسب اﻷنصبة
+      .row.pb-3.mt-3
+        .col-7
+          button.btn.btn-primary.btn-lg.arabic-content.mb-4(
+            id="submitAlwratha", type="submit",
+            aria-disabled='true') أحسب اﻷنصبة
+        .col-4
+          a.btn.btn-outline-warning.btn-lg.arabic-content(
+            href="/mirath/altarika",role='button', 
+            aria-disabled='true') رجوع 
     +addModal()
   script(src="/scripts/mirath/alwratha.brow.js")
 
