Remove navs of mirath navbar
Stakeholder thinks that navigating the app using the navbar
hinders the UX and she requested a navigation based on buttons. To
improve the UX, we add back buttons on all mirath pages and we
remove navs of mirath

--- a/app_server/views/mirath-tarika.jade
+++ b/app_server/views/mirath-tarika.jade
@@ -8,13 +8,13 @@ block content2
         id="altarikaData", method="POST",
         action= "/mirath/altarika")
         +displayAltarikaForm()
-        .row.pb-3.mt-3
-          .col-7
+        .row.pb-3.mt-3.justify-content-center
+          .col-6
             button.btn.btn-primary.btn-lg.arabic-content(
               id="submitAltarika",type="submit",
               aria-disabled='true',
               style="align = center") إدخال الورثة 
-          .col-4
+          .col-5.mr-2.col-sm-6.mr-sm-0
             a.btn.btn-outline-warning.btn-lg.arabic-content(
               href="/mirath",role='button', 
               aria-disabled='true') رجوع 
