Improve UI graphics & styling

--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -30,7 +30,7 @@ mixin displayItem(item)
 mixin createCards(listOfWratha)
   each people, cluster in listOfWratha 
     .card.mb-3.mt-3
-        h5.card-header.text-center.arabic-content #{cluster}  
+        h3.card-header.text-center.arabic-content.text-info #{cluster}  
         .card-body.arabic-content
           .row
             each person in people
