--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -8,7 +8,7 @@ html(lang='ar')
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
     
   body
-    .jumbotron.pt-3.mb-0.pb-0
+    .jumbotron.jumbotron-main.pt-3.mb-0.pb-0
       .container(align="middle")
         img.img-fluid.pb-2(src="/images/logo.png" alt="بسم الله الرحمن الرحيم")
       .container-fluid
