Improve UI graphics & styling

--- a/app_server/views/includes/mirath-mixins.jade
+++ b/app_server/views/includes/mirath-mixins.jade
@@ -1,6 +1,6 @@
 mixin displayAltarikaForm()
   - const altarikaTypes = ["أموال", "عقار"]
-  h5.arabic-content ادخل تفاصيل التركة
+  h3.arabic-content.text-info أدخل تفاصيل التركة
   hr.my-2.col-10.mr-0
   .col-12.col-sm-6
   each tarikaType in altarikaTypes
