--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -3,5 +3,6 @@ include ../includes/sharedHTMLFunctions
 
 block content1
   +displayNavItems(navbar)
-  block content2
+  center
+    block content2
   
