--- a/app_server/views/mirath-tarika.jade
+++ b/app_server/views/mirath-tarika.jade
@@ -4,13 +4,13 @@ include includes/mirath-mixins
 block content2
   .col-12.col-sm-10.col-lg-8.pb-3
     form.jumbotron.mt-3.pb-1(
-      id="altarikaData", method="POST",
+      id="tarikaForm", method="POST",
       action= "/mirath/altarika")
       +displayAltarikaForm()
       .row.pb-3.mt-3.justify-content-center
         .col-6
           button.btn.btn-primary.btn-lg.arabic-content(
-            id="submitAltarika",type="submit",
+            id="submitTarika",type="submit",
             aria-disabled='true',
             style="align = center") إدخال الورثة 
         .col-5.mr-2.col-sm-6.mr-sm-0
@@ -18,6 +18,6 @@ block content2
             href="/mirath",role='button', 
             aria-disabled='true') رجوع 
   +addModal()
-  script(src="/scripts/mirath/alwratha.brow.js")
+  script(src="/scripts/mirath/tarika.brow.js")
 
   
