Save & retrieve page state on back navigation
Before this, when user navigates to previous page, a fresh page is
served and hence all entered data would be lost. To improve UX in
editing the entered data, we save page state in sessionStorage and
retrieve it whenever the page is reloaded. The session data is
cleared at loading the home page of mirath.

--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -6,6 +6,5 @@ block content2
     +createCarousel(ayat)
     +createThreeButtons("إدخال التركة", "/mirath/altarika/",
       "إدخال الورثة", "/mirath/alwratha", "/")
-  script(src="/scripts/general.js")
-  
+  script(src="/scripts/mirath/home.brow.js")  
       
