Reset font-family to Amiri or Droid

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
 
 .arabic-content{
-    font-family:  Amiri, Droid Arabic Naskh, Times New Roman, Times;
+    font-family:   Amiri, Droid Arabic Naskh;
     font-size: large;
 }
 
