--- a/app_server/views/mirath-detail.jade
+++ b/app_server/views/mirath-detail.jade
@@ -10,6 +10,7 @@ block content2
         .card-body.arabic-content
     .row.pb-4
       .col-12
-        a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
+        btn.btn-primary.btn-lg.arabic-content(onclick='printPage()',
         role='button', aria-disabled='true') أطبع التفاصيل
   
+  script(src="/scripts/general.js")
