--- a/app_server/views/mirath-home.jade
+++ b/app_server/views/mirath-home.jade
@@ -4,7 +4,7 @@ include includes/sharedHTMLFunctions
 block content2
   center(style="position: relative;")
     +createCarousel(ayat)
-    +createThreeButtons("إدخال التركة", "/mirath/altarika/",
+    +createThreeButtons("إدخال التركة", "/mirath/altarika/", '',
       "إدخال الورثة", "/mirath/alwratha", "/")
   script(src="/scripts/mirath/home.brow.js")  
       
