--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -11,7 +11,7 @@ html(lang='ar')
     .pt-3.ml-0.mr-0
       .container(align="middle")
         img.img-fluid.pb-2(src="/images/logo.png" alt="بسم الله الرحمن الرحيم")
-      .container-fluid
+      .container-fluid#appSummary
         #banner.page-header.mt-0
           .row
             .col-12
