--- a/app_server/views/mirath-detail.jade
+++ b/app_server/views/mirath-detail.jade
@@ -8,7 +8,16 @@ block content2
         h5.card-header.text-center.arabic-content(
           style='background-color: #c7f6a894') تفاصيل حساب اﻷنصبه  
         .card-body.arabic-content
-    .row.pb-4
+
+    #buttons.row.pb-3.mt-3.justify-content-center
+      .col-6
+        a.btn.btn-primary.btn-lg.arabic-content(href='', onclick='printPage()',
+          role='button', aria-disabled='true') أطبع التفاصيل
+      .col-4.mr-5.col-sm-6.mr-sm-0
+        a.btn.btn-outline-warning.btn-lg.arabic-content(href='/mirath/result', 
+        role='button', aria-disabled='true') رجوع 
+    
+    //.row.pb-4
       .col-12
         btn.btn-primary.btn-lg.arabic-content(onclick='printPage()',
         role='button', aria-disabled='true') أطبع التفاصيل
